# sistema_credencializacion

./: .gitignore  build_mac.sh  build_windows.bat  credencializacion.spec  main.py  pyproject.toml  release.sh  test_api.py
.github/workflows/: build.yml
.kiro/specs/alineacion-atributos-vista-previa/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/multiplantillaje-base/: .config.kiro  design.md  requirements.md  tasks.md
data/: credencializacion.db.bak-20260626233821  credencializacion.db.bak-del16-20260626234635
hooks/: hook-credencializacion.py
src/credencializacion/: main.py
src/credencializacion/adapters/: __init__.py  base.py  image_cache.py  miescuela.py  normalizer.py  sheets.py
src/credencializacion/core/: printer.py  settings.py  updater.py
src/credencializacion/db/: engine.py  migrations.py  models.py  repositories.py
src/credencializacion/renderer/: __init__.py  coordinates.py  pdf_engine.py  print_manager.py  rotation.py  text_fit.py
src/credencializacion/services/: __init__.py  image_selection.py  template_assignment.py  template_validators.py  text_rules.py
src/credencializacion/ui/: app.py  styles.py  (+2 more)
tests/: test_control_panel_queue_assembly_properties.py  test_image_selection_properties.py  test_lado_config_repository_properties.py  test_multi_template_dialog.py  test_multi_template_repository_properties.py  test_pdf_engine_slots.py  test_render_and_migration_integration.py  test_template_assignment_properties.py  test_template_validators_properties.py  test_text_fit.py  test_text_fit_parity.py  test_wysiwyg_alignment.py
(+29 files in other folders)
