[project]
name = "sistema-credencializacion"
version = "0.1.1"
description = "Sistema de diseño e impresión de credenciales para múltiples organizaciones"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "SQLAlchemy>=2.0",
    "reportlab>=4.0",
    "thefuzz[speedup]",
    "requests>=2.31",
    "openpyxl>=3.1",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
    "gspread>=6.0",
    "google-auth>=2.0",
    "qtawesome>=1.4.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
credencializacion = "credencializacion.main:main"

[tool.setuptools.packages.find]
where = ["src"]
